WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287226
NetworkRTCTCPSocketCocoa::getInterfaceName is sometimes causing a nullptr crash
https://bugs.webkit.org/show_bug.cgi?id=287226
Summary
NetworkRTCTCPSocketCocoa::getInterfaceName is sometimes causing a nullptr crash
youenn fablet
Reported
2025-02-07 00:44:03 PST
NetworkRTCTCPSocketCocoa::getInterfaceName is sometimes causing a nullptr crash
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-02-07 00:44:37 PST
<
rdar://problem/144371678
>
youenn fablet
Comment 2
2025-02-07 00:47:08 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40197
EWS
Comment 3
2025-02-07 09:19:01 PST
Committed
290012@main
(79ebbe006f59): <
https://commits.webkit.org/290012@main
> Reviewed commits have been landed. Closing PR #40197 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug