NetworkRTCTCPSocketCocoa::getInterfaceName is sometimes causing a nullptr crash https://bugs.webkit.org/show_bug.cgi?id=287226 rdar://144371678

Reviewed by Eric Carlson.

We added a nullptr check in https://bugs.webkit.org/show_bug.cgi?id=285696 but it is not enough from testing.
We add a nullptr check at the call site to improve stability.

* Source/WebKit/NetworkProcess/webrtc/NetworkRTCTCPSocketCocoa.mm:
(WebKit::NetworkRTCTCPSocketCocoa::getInterfaceName):

Canonical link: https://commits.webkit.org/290012@main